fix: more padding in left column in split view to create gap for unit review header

--- a/frontend/src/app/routes/unit-overview/unit-overview.component.scss
+++ b/frontend/src/app/routes/unit-overview/unit-overview.component.scss
@@ -116,7 +116,7 @@
 
     :host ::ng-deep .left-column-scroll {
         .p-scrollpanel-wrapper .p-scrollpanel-content {
-            padding-right: 0.75rem !important; 
+            padding-right: 1.4rem !important; 
         }
         .p-scrollpanel-bar-y {
             margin-left: 0.5rem;
